- New feature: Added "Use high resolution emoticons" option
- New feature: added ECDH key exchange to encryption protocol
- User icons in chat window can be clicked also if the user is offline
- Disabled by default the option to search users by a multicast datagram
- Suspend/sleep mode is now managed also in Linux systems.
- Added "KeepModificationDateOnFileTransferred" option in beebeep.ini (it is always enabled in BeeBOX)
- Added "AllowedFileExtensionsInFileTransfer" option in beebeep.rc
- Added "AllowOnlyHostAddressesFromHostsIni" option in file beebeep.rc
- Added "Clear recent emoticons" in menu option of the chat bar
- Added "ConnectionKeyExchangeMethod" option in beebeep.rc
- Fixed known issue: BeeBEEP prevents the CTRL+ALT+B (or CMD+ALT+B on MacOSX) key sequence in other applications from working
- Fixed a bug in options "Disable create message" and "Disable edit groups"
- Fixed a visualization bug if you open an user VCARD near the side of your desktop
- Fixed a bug on Download folder when you copy BeeBEEP from a computer to another one
- Fixed security issue with command line argument -platformpluginpath

BeeBEEP 5.8.2
- New feature: voice messages (you can record your message and send it as file)
- New feature: file transfer pause/resume
- New feature: data compression with zlib 
- Voice messages can be also sent to offline users like text messages
- Added "Quote selected text" option to context menu (right click) of the chat
- Added "CheckUserConnectedFromDatagramIp" option in beebeep.rc (to prevent multiple connections from the same user but different ip addresses)
- Added "Clear system messages" option in context menu (right click) of activity and chat windows
- Added "SkipLocalHardwareAddresses" in beebeep.rc to skip unesuful network interfaces
- The option "AllowMultipleInstances" can be disabled also in Terminal Server because it checks also user account
- The avatar icon size is also applied in member icons of the chat windows